# tremolo

./: Cargo.toml  Justfile  LICENSE  README.md  flake.nix  schema.sql
src/: agent.rs  main.rs  server.rs  service.rs
src/server/: agent.rs  fake-data.sql  mod.rs
src/server/agents/: handlers.rs
src/server/api/: apps.rs  mod.rs
src/server/app/: handlers.rs
src/server/migrations/: 20250911115029_initial_app.sql  20250911115029_initial_schema.sql
src/snapshots/: tremolo__service__tests__basic_example.snap
ws/: auth.js
